# MaterialX

./: .gitignore  CMakeLists.txt  vcpkg.json
resources/Materials/TestSuite/: _options.mtlx
source/MaterialXRenderMdl/MaterialXRenderMdlStandalone/: CMakeLists.txt  example_df_vulkan.cpp  example_shared.cpp  example_shared.h  example_vulkan_shared.cpp  example_vulkan_shared.h  main.cpp  mdl_generator.cpp  mdl_generator.h  test_mdl_sdk.cpp  vulkan_base_application.cpp  vulkan_base_application.h
source/MaterialXRenderMdl/MaterialXRenderMdlStandalone/content/: mdl_runtime.glsl  path_trace.comp
source/MaterialXRenderMdl/MaterialXRenderMdlStandalone/utils/: io.h  log.h  mdl.cpp  mdl.h  strings.h
source/MaterialXTest/: CMakeLists.txt  README.md
source/MaterialXTest/MaterialXGenMdl/: GenMdl.cpp  GenMdl.h
source/MaterialXTest/MaterialXRender/: RenderUtil.cpp
source/MaterialXTest/MaterialXRenderMdl/: CMakeLists.txt  RenderMdl.cpp
